<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/miImagen"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/portada"
        android:layout_gravity="center_horizontal"
        android:contentDescription="TODO"
        android:src="@drawable/imageubi"></ImageView>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtUser"
            android:inputType="text"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPass"
            android:inputType="numberPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <!--<EditText-->
        <!--android:id="@+id/txtUser"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:hint="@string/user"-->
        <!--android:inputType="text"-->
        <!--/>-->

 <!--   <EditText
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        &lt;!&ndash;android:inputType="numberPassword"/>&ndash;&gt;-->

    <Button
        android:id="@+id/btnLog"
        style="@style/boton"
        android:layout_gravity="center"
        android:text="@string/log"/>

    <TextView
        android:id="@+id/lblIngreso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@android:color/holo_red_light" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mantener sesion en este dispositivo"
        android:layout_gravity="center"
        android:id="@+id/chkSession"/>


</LinearLayout>